--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,14 +5,25 @@
  */
 
 plugins {
-    id 'hexlet.code.java-application-conventions'
+    id 'java'
     id 'application'
     id 'checkstyle'
 }
 
+group 'hexlet.code'
+version '1.0-SNAPSHOT'
+
+repositories {
+    mavenCentral()
+}
+
 dependencies {
-    implementation 'org.apache.commons:commons-text'
-    implementation project(':utilities')
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+}
+
+test {
+    useJUnitPlatform()
 }
 
 application {
